--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1475,6 +1475,7 @@ header nav ul li .dropdown-toggle:hover {
 .product-image {
   width: 100px;
   height: auto;
+  border-radius: 5px;
 }
 
 .operation-header {
@@ -1503,8 +1504,6 @@ header nav ul li .dropdown-toggle:hover {
   color: #1e1e1e;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
-
-
 
 /* Responsive Design */
 @media (max-width: 768px) {
